Changed font on index. Soft hyphens index

--- a/index.html
+++ b/index.html
@@ -59,44 +59,43 @@
           <a href="firmafest.html">
           <img src="img/index/glasses2.png" alt="firmafester">
           <h6>Firma fester</h6>
-          <figcaption>Få en enestående madoplevelse til din firmafest, med retter skræddersyet efter dine ønsker.</figcaption>
+          <figcaption>Få en ene&shy;stå&shy;ende mad&shy;oplev&shy;else til din firma&shy;fest, med ret&shy;ter skræd&shy;der&shy;syet efter dine ønsker.</figcaption>
           </a>
         </figure>
         <figure>
           <a href="konferencer.html">
           <img src="img/index/meeting2.png" alt="konferencer">
           <h6>Konferencer</h6>
-          <figcaption>Afhold en mindeværdig konference i et stemningsfuldt lokale med spændende anretninger undervejs.</figcaption>
+          <figcaption>Af&shy;hold en minde&shy;værdig konfe&shy;rence i et stem&shy;ning&shy;sfuldt lo&shy;kale med spænd&shy;ende anr&shy;etning&shy;er under&shy;vejs.</figcaption>
           </a>
         </figure>
         <figure>
           <a href="teambuilding.html">
           <img src="img/index/teambuildingicon2.png" alt="Teambuilding">
           <h6>Teambuilding</h6>
-          <figcaption>Styrk båndet mellem dine medarbejdere gennem et guidet madlavningsarrangement.</figcaption>
+          <figcaption>Styrk bånd&shy;et mel&shy;lem dine med&shy;ar&shy;bejd&shy;ere gen&shy;nem et guid&shy;et mad&shy;lav&shy;nings&shy;ar&shy;range&shy;ment.</figcaption>
           </a>
         </figure>
       </div>
 
       <div class="norreport">
-        <h5>Madoplevelser nær Nørreport station</h5>
-        <p>I fælles dialog skaber vi innovative madoplevelser til dit firmaarrangement.</p>
-        <p>Nytænkning inden for madlavning er vores store passion, hvorfor hvert event er unikt.</p>
+        <h5>Gastronomi nær Nørreport st.</h5>
+        <p>Kun 5 minut&shy;ters gang fra Nørreport sta&shy;tion find&shy;er du vores stem&shy;nings&shy;fulde lo&shy;kal&shy;er, hvor vi siden 2013 har af&shy;holdt unik&shy;ke ar&shy;range&shy;ment&shy;er med inno&shy;vativ mad som om&shy;drej&shy;nings&shy;punkt.</p>
       </div>
 
       <img src="img/index/insektbillede.jpg" class="insects" alt="Insekter">
 
       <div class="reviewdiv">
-        <h5>Kundernes anmeldelser</h5>
+        <h5>Anmeldelser</h5>
         <div class="reviews">
           <div class="review">
             <h2 class="gås">“</h2>
-            <p>'Helt igennem fantastisk mad og meget smukke omgivelser. Personalet tager sig vildt godt af en, og oplevelsen er noget helt særligt og unikt.'</p>
+            <p>'Helt igen&shy;nem fan&shy;ta&shy;stisk mad og meget smuk&shy;ke om&shy;givel&shy;ser. Per&shy;sona&shy;let tag&shy;er sig vildt godt af en, og op&shy;level&shy;sen er noget helt sær&shy;ligt og unikt.'</p>
             <h4>- Frank Johansen, Nodea KBH</h4>
           </div>
           <div class="review">
             <h2 class="gås">“</h2>
-            <p>'Spændende teambuilding, hvor man får set nye sider af sine kollegaer. Samtidig lærer man noget om madlavning, som helt sikkert vil blive brugt i køkkenet derhjemme!'</p>
+            <p>'Spænd&shy;ende team&shy;build&shy;ing, hvor man får set nye sider af sine kol&shy;lega&shy;er. Sam&shy;tidig lærer man noget om mad&shy;lav&shy;ning, som helt sik&shy;kert vil blive brugt i køk&shy;ken&shy;et der&shy;hjem&shy;me!'</p>
             <h4>- Henriette Olsen, Rønkeby</h4>
           </div>
         </div>
