--- a/konferencer.html
+++ b/konferencer.html
@@ -42,7 +42,7 @@
         <img src="img/konferencer/konferencerbannermobil.jpg" class="mobilbanner" alt="Kødanretning på flise">
         <article>
           <h1>Konferencer</h1>
-          <h3>Minde&shy;værdige kon&shy;ferencer i et stemnings&shy;fuldt lo&shy;kale med spænd&shy;ende an&shy;retninger under&shy;vejs.</h3>
+          <h3>Afhold en minde&shy;værdig kon&shy;ference i et stemnings&shy;fuldt lo&shy;kale med spænd&shy;ende an&shy;retninger under&shy;vejs.</h3>
           <p>Vi sørger for behage&shy;lige om&shy;givel&shy;ser og inspire&shy;rende an&shy;retning&shy;er, så I kan af&shy;holde et ander&shy;ledes møde, hvor sans&shy;erne stimu&shy;leres. Antal&shy;let og typen af ret&shy;ter og drikke&shy;varer bestem&shy;mer I helt selv; fæl&shy;les for alt er, at serve&shy;ring&shy;erne vil sæt&shy;te kreativ&shy;iteten i gang.</p>
           <p>Der vil være frisk&shy;brygget kaffe og te gen&shy;nem hele mødet samt både projek&shy;tor, white&shy;board og højt&shy;talere til rådighed.</p>
 
