Soft hyphens in all text

--- a/dortefonden.html
+++ b/dortefonden.html
@@ -43,14 +43,14 @@
 <!-- Michelle start-->
         <article class="michelle-indhold">
         <h1>Dorte Fonden</h1>
-        <h3>Vi giver talentfulde kokke og tjenere en chance for at udleve deres drømme og idéer.</h3>
-        <p>I ånden af Gastronomisk Innovations afdøde medstifter Dorte Leck Fischer, bevilger vi årligt legater til to talentfulde kokke eller tjenere med stort potentiale. I forbindelse med denne begivenhed afholdes årligt en fundraisingmiddag.</p>
+        <h3>Vi giver talent&shy;fulde kok&shy;ke og tjen&shy;ere en chance for at ud&shy;leve deres drøm&shy;me og idé&shy;er.</h3>
+        <p>I ånd&shy;en af Gastronomisk Innovations af&shy;døde med&shy;stifter Dorte Leck Fischer, be&shy;vilger vi årligt legater til to talent&shy;fulde kok&shy;ke eller tjen&shy;ere med stort potentiale. I forbind&shy;else med den&shy;ne be&shy;given&shy;hed af&shy;holdes årligt en fund&shy;raisin&shy;gmiddag.</p>
 
         <p>
-        Legaterne muliggør for eksempel udrejse og udvidelse af modtagernes horisont eller fungere som startkapital til opstart af egne virksomheder.
-        Med dette håber vi at kunne fremme nytænkning og vidensdeling inden for gastronomien på tværs af landegrænserne.</p>
+        Legat&shy;erne mulig&shy;gør for eksempel udrejse og udvid&shy;else af modtag&shy;ernes hori&shy;sont eller fungere som start&shy;kapital til opstart af egne virk&shy;somhed&shy;er.
+        Med dette håber vi at kun&shy;ne frem&shy;me ny&shy;tænk&shy;ning og videns&shy;deling inden for gastro&shy;nomien på tværs af lande&shy;grænserne.</p>
 
-        <p>Fundraisingmiddagen bliver afholdt af vores NaCl team</p>
+        <p>Fundraisingmiddage bliver afholdt af vores NaCl team</p>
 
       </article>
       <img id="middle" src="img/okt17.jpg" alt="holdet der hjalp under fonding">
@@ -59,7 +59,7 @@
         <p id="caption">Holdet der hjalp til under Dortefondens seneste galla</p>
 
         <h1 id="nacl">NaCl showcooking</h1>
-        <p>Kom helt tæt på madlavningen under vores showcooking events, hvor dit sanseapparat vil mødes med dufte, smage og æstetik. Under eventet vil du få en helt ny og anderledes oplevelse af, hvordan man kan lave mad. Gastronomisk Innovation vil sørge for dig hele aften - maden bliver lavet af vores dygtige kokke og serveret af de bedste tjenere. Under maden vil der også komme underholdning i form af eks. musik og meget mere.</p>
+        <p>Kom helt tæt på mad&shy;lav&shy;ningen under vores show&shy;cooking events, hvor dit sanse&shy;apparat vil mødes med dufte, smage og æstetik. Under eventet vil du få en helt ny og ander&shy;ledes oplev&shy;else af, hvor&shy;dan man kan lave mad. Gastronomisk Innovation vil sørge for dig hele aftenen - maden bliver lavet af vores dygtige kok&shy;ke og serveret af de bedste tjen&shy;ere. Under maden vil der også kom&shy;me under&shy;holdning i form af eks. musik og meget mere.</p>
 
         <p>Tilmelder du dig vores nyhedsbrev, får du tilsendt information forud for vores næste showcooking.</p>
       </article>
