--- a/omos.html
+++ b/omos.html
@@ -44,7 +44,8 @@
 
     <article class="familie">
     <h1 class="omos">Hvem er vi</h1>
-    <p>Vores lille familieforetagende har siden 2013 afholdt innovative madarrangementer unikt sammensat til det enkelte selskabs ønsker. Med erfaring fra den trestjernede Michelinrestaurant Martin Berasategui i Spanien leder Rasmus Leck Fischer vores hold af passionerede kokke. Til de anderledes retter udvælges de bedste vine af vores sommelier Gin Isabel Kristensen.</p>
+    <p>Vores lil&shy;le familie&shy;foretag&shy;ende har siden 2013 af&shy;holdt in&shy;nova&shy;tive mad&shy;arrange&shy;menter unikt sam&shy;men&shy;sat til det enkel&shy;te sel&shy;skabs ønsker.
+    Med erfar&shy;ing fra den tre&shy;stjerne&shy;de Michelin&shy;restau&shy;rant Martin Berasategui i Spanien leder Rasmus Leck Fischer vores hold af pas&shy;sion&shy;erede kok&shy;ke. Til de ander&shy;ledes ret&shy;ter ud&shy;vælges de bedste vine af vores sommelier Gin Isabel Kristensen.</p>
 
     <p>Vores målsætning er at bringe folk sammen om specielle madoplevelser og fremme gastronomien i Danmark. I fremtiden ser vi Gastronomisk Innovation udvide til flere steder i Danmark for at kunne tilbyde innovative madoplevelser til flere mennesker.</p>
 
@@ -59,20 +60,20 @@
  <figure class="galleryitem">
   <img src="img/morten.jpg" alt="project" class="mortenflex">
    <figcaption class="captions">Morten Henningsen</figcaption>
-     <span>Morten Henningsen er daglig leder af Gastronomisk Innovation, og har mange års  erfaring i medieproduktion, sound design, kommunikation og projektledelse. Han har blandt andet været ansat hos Sony Music og var tidligere ejer af Easy Film. Gastronomisk Innovation er stiftet af Morten Henningsen og afdøde Dorte Leck Fischer.</span>
+     <span>Morten Henningsen er dag&shy;lig led&shy;er af Gastronomisk Innovation, og har mange års  er&shy;far&shy;ing i medie&shy;produk&shy;tion, sound design, kom&shy;muni&shy;kation og pro&shy;jekt&shy;ledelse. Han har blandt andet været ansat hos Sony Music og var tid&shy;lig&shy;ere ejer af Easy Film. Gastronomisk Innovation er stiftet af Morten Henningsen og af&shy;døde Dorte Leck Fischer.</span>
 </figure>
 
 <figure class="galleryitem">
  <img src="img/rasmus2.jpg" alt="project" class="rasmusflex">
     <figcaption class="captions">Rasmus Leck Fischer</figcaption>
-    <span>Rasmus Leck Fischer er køkkenchef hos Gastronomisk Innovation. Her laver han bl.a. workshops, private dining og leverer opskrifter til månedsmagasinet Gastro. Rasmus har arbejdet som kok på den 3-stjernede Michelinrestaurant Martin Berasetegui i Spanien, og er derudover forfatter til en række anmelderroste kogebøger.
+    <span>Rasmus Leck Fischer er køk&shy;ken&shy;chef hos Gastronomisk Innovation. Her laver han bl.a. workshops, private dining og leve&shy;rer op&shy;skrif&shy;ter til må&shy;neds&shy;ma&shy;gasin&shy;et Gastro. Rasmus har arbejd&shy;et som kok på den 3-stjerne&shy;de Michelin&shy;restau&shy;rant Martin Berasetegui i Spanien, og er der&shy;ud&shy;over for&shy;fat&shy;ter til en ræk&shy;ke anmeld&shy;er&shy;roste koge&shy;bøg&shy;er.
 </span>
 </figure>
 
 <figure class="galleryitem">
  <img src="img/isabel.jpg" alt="project" class="isabelflex">
   <figcaption class="captions">Gin Isabel</figcaption>
- <span>Gin Isabel Kristensen har mange års erfaring som restaurantchef og er uddannet tjener. Derudover har hun arbejdet som chef sommelier på Nimbs restaurant. Gin er projektleder og står for at sikre professionel og personlig afvikling af arrangementer afholdt hos Gastronomisk Innovation.</span>
+ <span>Gin Isabel Kristensen har mange års erfar&shy;ing som restau&shy;rant&shy;chef og er ud&shy;dan&shy;net tjen&shy;er. Der&shy;ud&shy;over har hun ar&shy;bejd&shy;et som chef sommelier på Nimbs restau&shy;rant. Gin er pro&shy;jekt&shy;leder og står for at sikre profes&shy;sion&shy;el og person&shy;lig af&shy;vikl&shy;ing af arrange&shy;ment&shy;er af&shy;holdt hos Gastronomisk Innovation.</span>
  </figure>
  </div>
 
@@ -89,7 +90,7 @@
 <br>
     <article class="booktext">
     <h1 class="omos">Bøger af Rasmus Leck Fischer</h1>
-    <p>Rasmus er forfatter til de anmelderoste kogebøger UKRUDT, SNAPS (naturen på flaske) og INSECTIVORE. Her sætter Rasmus ord og opskrifter på sin store passion for naturens mangfoldige spisekammer, som man selv kan gå på opdagelse i.</p>
+    <p>Rasmus er for&shy;fat&shy;ter til de anmeld&shy;er&shy;roste koge&shy;bøger UKRUDT, SNAPS (naturen på flaske) og INSECTIVORE. Her sæt&shy;ter Rasmus ord og op&shy;skrift&shy;er på sin store pas&shy;sion for naturens mang&shy;foldige spise&shy;kam&shy;mer, som man selv kan gå på opdag&shy;else i.</p>
     </article>
 
 <!-- Flexbox 2 - books -->
@@ -98,21 +99,21 @@
  <figure class="galleryitem">
   <img src="img/snaps.jpg" alt="project" class="snaps">
    <figcaption class="captions">"Snaps"</figcaption>
-     <span>Snapsen er for længst stadfæstet som nordisk nationaldrik, og det er i sig selv en præstation, eftersom ganske mange slet ikke bryder sig om den. For dem er snapsen uløseligt vævet sammen med højtidernes frokoster, hvor den i ordets bogstaveligste forstand skylles ned med øl eller andet, der kan kamuflere smagen. I samme tjeneste vælger mange at fryse snapsen, og begge tiltag er ifølge kokken Rasmus Leck Fischer et symptom på dårlig snaps.</span>
+     <span>Snaps&shy;en er for længst stad&shy;fæstet som nordisk national&shy;drik, og det er i sig selv en præstation, efter&shy;som ganske mange slet ikke bryder sig om den. For dem er snaps&shy;en uløse&shy;ligt vævet sam&shy;men med høj&shy;tider&shy;nes fro&shy;kost&shy;er, hvor den i ordets bogstaveligste for&shy;stand skyl&shy;les ned med øl eller andet, der kan kamu&shy;flere smagen. I sam&shy;me tjeneste vælger mange at fryse snapsen, og begge til&shy;tag er ifølge kok&shy;ken Rasmus Leck Fischer et symptom på dår&shy;lig snaps.</span>
      <span><a href="https://www.saxo.com/dk/snaps_rasmus-leck-fischer_hardback_9788792559289" class="buylink" target="_blank">Køb her</a></span>
 </figure>
 
 <figure class="galleryitem">
  <img src="img/ukrudt.jpg" alt="project" class="ukrudt">
   <figcaption class="captions">"Ukrudt"</figcaption>
- <span>Ukrudt er en oversigt, en fortælling og en opskriftsamling over danske krydderurter, af nogle folk også kendt som ukrudt. Gennem lang tid, har større dele af de danske krydderurter blot været anset som ukrugt, men mange af disse indholder en større smagsoplevelse en nogen anden urt der kan købes, samtidig med at de er sprængfyldt med vitaminer! Bogen giver dig en fortælling om de danske urter,  og en lang række rustikke opskrifter.</span>
+ <span>Ukrudt er en over&shy;sigt, en fortæl&shy;ling og en opskrift&shy;samling over danske kryd&shy;der&shy;urter, af nogle folk også kendt som ukrudt. Gen&shy;nem lang tid, har stør&shy;re dele af de danske kryd&shy;der&shy;urter blot været an&shy;set som ukrudt, men mange af dis&shy;se inde&shy;holder en stør&shy;re smags&shy;oplev&shy;else en nogen anden urt der kan købes, samtidig med at de er spræng&shy;fyldt med vita&shy;miner! Bogen giver dig en fortæl&shy;ling om de danske urter, og en lang ræk&shy;ke rustik&shy;ke opskrifter.</span>
  <span><a href="https://www.saxo.com/dk/ukrudt_rasmus-leck-fischer_indbundet_9788771087611" class="buylink" target="_blank">Køb her</a></span>
 </figure>
 
 <figure class="galleryitem">
  <img src="img/insect.jpg" alt="project" class="book">
     <figcaption class="captions">"Insectivore"</figcaption>
-    <span>Insekter er en helt almindelig del af menuen i mange lande. Det er sjovt og udfordrende at sætte tænderne i en sprødstegt græshoppe vendt i krydderier, men det er også en meget nærende og proteinrig kilde, som vi kommer til at se meget mere til.  Efterspørgslen på kød vokser, og produktionen af det slider hårdt på miljøet. Der er derfor brug for alternative proteinkilder, når vi skal tænke bæredygtighed ind i vores hverdag.</span>
+    <span>Insekter er en helt almindelig del af menuen i mange lande. Det er sjovt og udfordr&shy;ende at sæt&shy;te tænd&shy;erne i en sprød&shy;stegt græs&shy;hoppe vendt i krydderier, men det er også en meget nærende og protein&shy;rig kilde, som vi kom&shy;mer til at se meget mere til. Efter&shy;spørgslen på kød vokser, og produkt&shy;ionen af det slid&shy;er hårdt på miljø&shy;et. Der er der&shy;for brug for alter&shy;native protein&shy;kilder, når vi skal tænke bære&shy;dygtig&shy;hed ind i vores hver&shy;dag.</span>
     <span><a href="https://www.saxo.com/dk/insectivore_rasmus-leck-fischerflemming-gernyx_indbundet_9788793314825" class="buylink" target="_blank">Køb her</a></span>
   </figure>
 </div>
