Margin on omos.html

--- a/omos.html
+++ b/omos.html
@@ -50,9 +50,6 @@
     <p>Vores målsætning er at bringe folk sammen om specielle madoplevelser og fremme gastronomien i Danmark. I fremtiden ser vi Gastronomisk Innovation udvide til flere steder i Danmark for at kunne tilbyde innovative madoplevelser til flere mennesker.</p>
 
     </article>
-<br>
-<br>
-<br>
 
 <!-- Katja Flexbox 1 - kokkene -->
 <h1 class="omos centertext">Holdet bag</h1>
@@ -72,12 +69,11 @@
 
 <figure class="galleryitem">
  <img src="img/isabel.jpg" alt="project" class="isabelflex">
-  <figcaption class="captions">Gin Isabel</figcaption>
+  <figcaption class="captions">Gin Isabel Kristensen</figcaption>
  <span>Gin Isabel Kristensen har mange års erfar&shy;ing som restau&shy;rant&shy;chef og er ud&shy;dan&shy;net tjen&shy;er. Der&shy;ud&shy;over har hun ar&shy;bejd&shy;et som chef sommelier på Nimbs restau&shy;rant. Gin er pro&shy;jekt&shy;leder og står for at sikre profes&shy;sion&shy;el og person&shy;lig af&shy;vikl&shy;ing af arrange&shy;ment&shy;er af&shy;holdt hos Gastronomisk Innovation.</span>
  </figure>
  </div>
 
- <br>
  <article class="interview">
     <h1 class="omos centertext">Køkkenchefens passion</h1>
     <div class="videoWrapper">
@@ -85,9 +81,7 @@
     </div>
   </article>
 
-<br>
-<br>
-<br>
+
     <article class="booktext">
     <h1 class="omos">Bøger af Rasmus Leck Fischer</h1>
     <p>Rasmus er for&shy;fat&shy;ter til de anmeld&shy;er&shy;roste koge&shy;bøger UKRUDT, SNAPS (naturen på flaske) og INSECTIVORE. Her sæt&shy;ter Rasmus ord og op&shy;skrift&shy;er på sin store pas&shy;sion for naturens mang&shy;foldige spise&shy;kam&shy;mer, som man selv kan gå på opdag&shy;else i.</p>
@@ -118,9 +112,6 @@
   </figure>
 </div>
 </div>
-
-<br>
-<br>
 </main>
 
 
