Favicon fixed. Analytics added

--- a/dortefonden.html
+++ b/dortefonden.html
@@ -1,19 +1,29 @@
 <!DOCTYPE html>
 <html>
   <head>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109349681-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-109349681-2');
+    </script>
+
     <meta charset="utf-8">
     <title>Gastronomisk Innovation | Dortefonden</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300|Playfair+Display" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/favicon/manifest.json">
-    <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#ffbc37">
-    <link rel="shortcut icon" href="/favicon/favicon.ico">
-    <meta name="msapplication-config" content="/favicon/browserconfig.xml">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/manifest.json">
+    <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#ffbc37">
+    <link rel="shortcut icon" href="favicon/favicon.ico">
+    <meta name="msapplication-config" content="favicon/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
   </head>
   <body>
@@ -68,7 +78,7 @@
         <p id="caption">Holdet der hjalp til under Dortefondens seneste galla</p>
 
         <h1 id="nacl">NaCl showcooking</h1>
-        <p>Kom helt tæt på mad&shy;lav&shy;ningen under vores show&shy;cooking events, hvor dit sanse&shy;apparat vil mødes med dufte, smage og æstetik. Under eventet vil du få en helt ny og ander&shy;ledes oplev&shy;else af, hvor&shy;dan man kan lave mad. Gastronomisk Innovation vil sørge for dig hele aftenen - maden bliver lavet af vores dygtige kok&shy;ke og serveret af de bedste tjen&shy;ere. Under maden vil der også kom&shy;me under&shy;holdning i form af eks. musik og meget mere.</p>
+        <p>Kom helt tæt på mad&shy;lav&shy;ningen under vores show&shy;cooking events, hvor dit sanse&shy;apparat vil mødes med dufte, smage og æstetik. Under eventet vil du få en helt ny og ander&shy;ledes oplev&shy;else af, hvor&shy;dan man kan lave mad. Gastronomisk Innovation vil sørge for dig hele aftenen - maden bliver lavet af vores dygtige kok&shy;ke og serveret af de bedste tjen&shy;ere. Til maden vil der være under&shy;holdning i form af eks. musik og meget mere.</p>
 
         <p>Tilmelder du dig vores nyhedsbrev, får du tilsendt information forud for vores næste showcooking.</p>
       </article>
