--- a/omos.html
+++ b/omos.html
@@ -138,7 +138,7 @@
       <div class="formdiv">
         <form action="action_page.php">
           <div class="mail" >
-            <a href="http://nicolaikilhof.dk/gastronomisk-innovation/img/kallemanden.mov" ><h3>Tilmeld nyhedsbrev</h3></a>
+            <a href="#" ><h3>Tilmeld nyhedsbrev</h3></a>
             <input type="text" placeholder="Email" name="email" required>
             <button type="submit" class="signupbtn">Tilmeld</button>
           </div>
@@ -149,7 +149,7 @@
           <a href="https://goo.gl/maps/WK9mbAa1QhL2">Adr: Frederiksborggade 1B 4.th. | 1360 København K</a>
         </div>
         <div class="">
-          <a href="mailto: info@gastronomiskinnovation.dk">E-mail: info@gastronomiskinnovation.dk</a>
+          <a href="mailto:info@gastronomiskinnovation.dk">E-mail: info@gastronomiskinnovation.dk</a>
         </div>
         <div class="">
           <a href="tel:31106953">Tlf: 3110 6953</a>
