Added credits and lang attribute

--- a/dortefonden.html
+++ b/dortefonden.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  <head lang="da">
         <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109349681-2"></script>
     <script>
@@ -72,7 +72,7 @@
         <p>Fundraisingmiddage bliver afholdt af vores NaCl team</p>
 
       </article>
-      <img id="middle" src="img/okt17.jpg" alt="holdet der hjalp under fonding">
+      <img id="middle" src="img/okt17.jpg" alt="holdet der hjalp under gallaen">
 
       <article class="michelle-indhold">
         <p id="caption">Holdet der hjalp til under Dortefondens seneste galla</p>
@@ -85,13 +85,13 @@
 
       <div class="grid">
         <div class="billederher">
-          <img src="img/krabbe.jpg" alt="">
-          <img src="img/forsamling.jpg" alt="">
+          <img src="img/krabbe.jpg" alt="Mad">
+          <img src="img/forsamling.jpg" alt="Forsamling til galla">
         </div>
         <div class="billederder">
-          <img src="img/bord.jpg" alt="">
-          <img src="img/dortetilberedning.jpg" alt="">
-          <img src="img/musik2.jpg" alt="">
+          <img src="img/bord.jpg" alt="Dækket bord">
+          <img src="img/dortetilberedning.jpg" alt="Tilberedning af mad">
+          <img src="img/musik2.jpg" alt="Musiker">
         </div>
       </div>
 
@@ -121,6 +121,7 @@
         </div>
       </div>
       <div class="someikoner">
+        <!--Icons made by https://www.flaticon.com/authors/google. Used under Creative Commons BY 3.0 license-->
         <a href="https://www.facebook.com/281933641918247/" target="_blank">
         <img src="img/facebook.png" alt="Facebook"></a>
         <a href="https://www.instagram.com/gastronomiskinnovation/" target="_blank">
