--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="da">
   <head>
         <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109349681-2"></script>
@@ -153,6 +153,7 @@
         </div>
       </div>
       <div class="someikoner">
+        <!--Icons made by https://www.flaticon.com/authors/google. Used under Creative Commons BY 3.0 license-->
         <a href="https://www.facebook.com/281933641918247/" target="_blank">
         <img src="img/facebook.png" alt="Facebook"></a>
         <a href="https://www.instagram.com/gastronomiskinnovation/" target="_blank">
