--- a/omos.html
+++ b/omos.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  <head lang="da">
         <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109349681-2"></script>
     <script>
@@ -74,20 +74,20 @@
 <h1 class="omos centertext">Holdet bag</h1>
 <div class="gallery">
  <figure class="galleryitem">
-  <img src="img/morten.jpg" alt="project" class="mortenflex">
+  <img src="img/morten.jpg" alt="Morten Henningsen" class="mortenflex">
    <figcaption class="captions">Morten Henningsen</figcaption>
      <span>Morten Henningsen er dag&shy;lig led&shy;er af Gastronomisk Innovation, og har mange års  er&shy;far&shy;ing i medie&shy;produk&shy;tion, sound design, kom&shy;muni&shy;kation og pro&shy;jekt&shy;ledelse. Han har blandt andet været ansat hos Sony Music og var tid&shy;lig&shy;ere ejer af Easy Film. Gastronomisk Innovation er stiftet af Morten Henningsen og af&shy;døde Dorte Leck Fischer.</span>
 </figure>
 
 <figure class="galleryitem">
- <img src="img/rasmus2.jpg" alt="project" class="rasmusflex">
+ <img src="img/rasmus2.jpg" alt="Rasmus Leck Fischer" class="rasmusflex">
     <figcaption class="captions">Rasmus Leck Fischer</figcaption>
     <span>Rasmus Leck Fischer er køk&shy;ken&shy;chef hos Gastronomisk Innovation. Her laver han bl.a. workshops, private dining og leve&shy;rer op&shy;skrif&shy;ter til må&shy;neds&shy;ma&shy;gasin&shy;et Gastro. Rasmus har arbejd&shy;et som kok på den 3-stjerne&shy;de Michelin&shy;restau&shy;rant Martin Berasetegui i Spanien, og er der&shy;ud&shy;over for&shy;fat&shy;ter til en ræk&shy;ke anmeld&shy;er&shy;roste koge&shy;bøg&shy;er.
 </span>
 </figure>
 
 <figure class="galleryitem">
- <img src="img/isabel.jpg" alt="project" class="isabelflex">
+ <img src="img/isabel.jpg" alt="Gin Isabel" class="isabelflex">
   <figcaption class="captions">Gin Isabel Kristensen</figcaption>
  <span>Gin Isabel Kristensen har mange års erfar&shy;ing som restau&shy;rant&shy;chef og er ud&shy;dan&shy;net tjen&shy;er. Der&shy;ud&shy;over har hun ar&shy;bejd&shy;et som chef sommelier på Nimbs restau&shy;rant. Gin er pro&shy;jekt&shy;leder og står for at sikre profes&shy;sion&shy;el og person&shy;lig af&shy;vikl&shy;ing af arrange&shy;ment&shy;er af&shy;holdt hos Gastronomisk Innovation.</span>
  </figure>
@@ -110,21 +110,21 @@
 
 <div class="gallery">
  <figure class="galleryitem">
-  <img src="img/snaps.jpg" alt="project" class="snaps">
+  <img src="img/snaps.jpg" alt="Bogen Snaps" class="snaps">
    <figcaption class="captions">"Snaps"</figcaption>
      <span>Snaps&shy;en er for længst stad&shy;fæstet som nordisk national&shy;drik, og det er i sig selv en præstation, efter&shy;som ganske mange slet ikke bryder sig om den. For dem er snaps&shy;en uløse&shy;ligt vævet sam&shy;men med høj&shy;tider&shy;nes fro&shy;kost&shy;er, hvor den i ordets bogstaveligste for&shy;stand skyl&shy;les ned med øl eller andet, der kan kamu&shy;flere smagen. I sam&shy;me tjeneste vælger mange at fryse snapsen, og begge til&shy;tag er ifølge kok&shy;ken Rasmus Leck Fischer et symptom på dår&shy;lig snaps.</span>
      <span><a href="https://www.saxo.com/dk/snaps_rasmus-leck-fischer_hardback_9788792559289" class="buylink" target="_blank">Køb her</a></span>
 </figure>
 
 <figure class="galleryitem">
- <img src="img/ukrudt.jpg" alt="project" class="ukrudt">
+ <img src="img/ukrudt.jpg" alt="Bogen Ukrudt" class="ukrudt">
   <figcaption class="captions">"Ukrudt"</figcaption>
  <span>Ukrudt er en over&shy;sigt, en fortæl&shy;ling og en opskrift&shy;samling over danske kryd&shy;der&shy;urter, af nogle folk også kendt som ukrudt. Gen&shy;nem lang tid, har stør&shy;re dele af de danske kryd&shy;der&shy;urter blot været an&shy;set som ukrudt, men mange af dis&shy;se inde&shy;holder en stør&shy;re smags&shy;oplev&shy;else en nogen anden urt der kan købes, samtidig med at de er spræng&shy;fyldt med vita&shy;miner! Bogen giver dig en fortæl&shy;ling om de danske urter, og en lang ræk&shy;ke rustik&shy;ke opskrifter.</span>
  <span><a href="https://www.saxo.com/dk/ukrudt_rasmus-leck-fischer_indbundet_9788771087611" class="buylink" target="_blank">Køb her</a></span>
 </figure>
 
 <figure class="galleryitem">
- <img src="img/insect.jpg" alt="project" class="book">
+ <img src="img/insect.jpg" alt="Bogen Insectivore" class="book">
     <figcaption class="captions">"Insectivore"</figcaption>
     <span>Insekter er en helt almindelig del af menuen i mange lande. Det er sjovt og udfordr&shy;ende at sæt&shy;te tænd&shy;erne i en sprød&shy;stegt græs&shy;hoppe vendt i krydderier, men det er også en meget nærende og protein&shy;rig kilde, som vi kom&shy;mer til at se meget mere til. Efter&shy;spørgslen på kød vokser, og produkt&shy;ionen af det slid&shy;er hårdt på miljø&shy;et. Der er der&shy;for brug for alter&shy;native protein&shy;kilder, når vi skal tænke bære&shy;dygtig&shy;hed ind i vores hver&shy;dag.</span>
     <span><a href="https://www.saxo.com/dk/insectivore_rasmus-leck-fischerflemming-gernyx_indbundet_9788793314825" class="buylink" target="_blank">Køb her</a></span>
@@ -156,6 +156,7 @@
         </div>
       </div>
       <div class="someikoner">
+        <!--Icons made by https://www.flaticon.com/authors/google. Used under Creative Commons BY 3.0 license-->
         <a href="https://www.facebook.com/281933641918247/" target="_blank">
         <img src="img/facebook.png" alt="Facebook"></a>
         <a href="https://www.instagram.com/gastronomiskinnovation/" target="_blank">
