--- a/teambuilding.html
+++ b/teambuilding.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  <head lang="da">
         <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109349681-2"></script>
     <script>
@@ -108,6 +108,7 @@
         </div>
       </div>
       <div class="someikoner">
+        <!--Icons made by https://www.flaticon.com/authors/google. Used under Creative Commons BY 3.0 license-->
         <a href="https://www.facebook.com/281933641918247/" target="_blank">
         <img src="img/facebook.png" alt="Facebook"></a>
         <a href="https://www.instagram.com/gastronomiskinnovation/" target="_blank">
