Removed link from h3 footer

--- a/firmafest.html
+++ b/firmafest.html
@@ -91,7 +91,7 @@
       <div class="formdiv">
         <form action="action_page.php">
           <div class="mail" >
-            <a href="#"><h3>Tilmeld nyhedsbrev</h3></a>
+            <h3>Tilmeld nyhedsbrev</h3>
             <input type="text" placeholder="Email" name="email" required>
             <button type="submit" class="signupbtn">Tilmeld</button>
           </div>
