Hover buy buttons. Link to fb review

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <img src="img/index/star.png" alt="stjerne">
             <img src="img/index/star.png" alt="stjerne">
           </div>
-          <p>Facebook anmeldelser  4.8 stjerner</p>
+          <a href="https://www.facebook.com/pg/Gastronomisk-Innovation-281933641918247/reviews/"><p>Facebook anmeldelser: 4.8 stjerner</p></a>
         </div>
       </div>
     </main>
