Added credits for book descriptions

--- a/omos.html
+++ b/omos.html
@@ -118,7 +118,7 @@
  <figure class="galleryitem">
   <img src="img/snaps.jpg" alt="Bogen Snaps" class="snaps">
    <figcaption class="captions">"Snaps"</figcaption>
-     <span>Snaps&shy;en er for længst stad&shy;fæstet som nordisk national&shy;drik, og det er i sig selv en præstation, efter&shy;som ganske mange slet ikke bryder sig om den. For dem er snaps&shy;en uløse&shy;ligt vævet sam&shy;men med høj&shy;tider&shy;nes fro&shy;kost&shy;er, hvor den i ordets bogstaveligste for&shy;stand skyl&shy;les ned med øl eller andet, der kan kamu&shy;flere smagen. I sam&shy;me tjeneste vælger mange at fryse snapsen, og begge til&shy;tag er ifølge kok&shy;ken Rasmus Leck Fischer et symptom på dår&shy;lig snaps.</span>
+     <span>"Snaps&shy;en er for længst stad&shy;fæstet som nordisk national&shy;drik, og det er i sig selv en præstation, efter&shy;som ganske mange slet ikke bryder sig om den. For dem er snaps&shy;en uløse&shy;ligt vævet sam&shy;men med høj&shy;tider&shy;nes fro&shy;kost&shy;er, hvor den i ordets bogstaveligste for&shy;stand skyl&shy;les ned med øl eller andet, der kan kamu&shy;flere smagen. I sam&shy;me tjeneste vælger mange at fryse snapsen, og begge til&shy;tag er ifølge kok&shy;ken Rasmus Leck Fischer et symptom på dår&shy;lig snaps." - Saxo.com</span>
 
      <span class="centertext"><a href="https://www.saxo.com/dk/snaps_rasmus-leck-fischer_hardback_9788792559289" class="buylink" target="_blank">Køb her</a></span>
 </figure>
@@ -126,14 +126,14 @@
 <figure class="galleryitem">
  <img src="img/ukrudt.jpg" alt="Bogen Ukrudt" class="ukrudt">
   <figcaption class="captions">"Ukrudt"</figcaption>
- <span>Ukrudt er en over&shy;sigt, en fortæl&shy;ling og en opskrift&shy;samling over danske kryd&shy;der&shy;urter, af nogle folk også kendt som ukrudt. Gen&shy;nem lang tid, har stør&shy;re dele af de danske kryd&shy;der&shy;urter blot været an&shy;set som ukrudt, men mange af dis&shy;se inde&shy;holder en stør&shy;re smags&shy;oplev&shy;else en nogen anden urt der kan købes, samtidig med at de er spræng&shy;fyldt med vita&shy;miner! Bogen giver dig en fortæl&shy;ling om de danske urter, og en lang ræk&shy;ke rustik&shy;ke opskrifter.</span>
+ <span>"Ukrudt er en over&shy;sigt, en fortæl&shy;ling og en opskrift&shy;samling over danske kryd&shy;der&shy;urter, af nogle folk også kendt som ukrudt. Gen&shy;nem lang tid, har stør&shy;re dele af de danske kryd&shy;der&shy;urter blot været an&shy;set som ukrudt, men mange af dis&shy;se inde&shy;holder en stør&shy;re smags&shy;oplev&shy;else en nogen anden urt der kan købes, samtidig med at de er spræng&shy;fyldt med vita&shy;miner! Bogen giver dig en fortæl&shy;ling om de danske urter, og en lang ræk&shy;ke rustik&shy;ke opskrifter." - Saxo.com</span>
  <span class="centertext"><a href="https://www.saxo.com/dk/ukrudt_rasmus-leck-fischer_indbundet_9788771087611" class="buylink" target="_blank">Køb her</a></span>
 </figure>
 
 <figure class="galleryitem">
  <img src="img/insect.jpg" alt="Bogen Insectivore" class="book">
     <figcaption class="captions">"Insectivore"</figcaption>
-    <span>Insekter er en helt almindelig del af menuen i mange lande. Det er sjovt og udfordr&shy;ende at sæt&shy;te tænd&shy;erne i en sprød&shy;stegt græs&shy;hoppe vendt i krydderier, men det er også en meget nærende og protein&shy;rig kilde, som vi kom&shy;mer til at se meget mere til. Efter&shy;spørgslen på kød vokser, og produkt&shy;ionen af det slid&shy;er hårdt på miljø&shy;et. Der er der&shy;for brug for alter&shy;native protein&shy;kilder, når vi skal tænke bære&shy;dygtig&shy;hed ind i vores hver&shy;dag.</span>
+    <span>"Insekter er en helt almindelig del af menuen i mange lande. Det er sjovt og udfordr&shy;ende at sæt&shy;te tænd&shy;erne i en sprød&shy;stegt græs&shy;hoppe vendt i krydderier, men det er også en meget nærende og protein&shy;rig kilde, som vi kom&shy;mer til at se meget mere til. Efter&shy;spørgslen på kød vokser, og produkt&shy;ionen af det slid&shy;er hårdt på miljø&shy;et. Der er der&shy;for brug for alter&shy;native protein&shy;kilder, når vi skal tænke bære&shy;dygtig&shy;hed ind i vores hver&shy;dag." - Saxo.com</span>
     <span class="centertext"><a href="https://www.saxo.com/dk/insectivore_rasmus-leck-fischerflemming-gernyx_indbundet_9788793314825" class="buylink" target="_blank">Køb her</a></span>
   </figure>
 </div>
